--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="assests/CSS/styles.css">
 
-        <title>Responsive Portfolio Website</title>
+        <title>Harsh Portfolio Website</title>
+        <link rel="icon" href="assests/img/window.svg">
     </head>
     <body>
         <!--==================== HEADER ====================-->
