--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <link rel="icon" href="assests/img/window.svg">
     </head>
     <body>
+        <audio autoplay loop >
+            <source src="assests/song/My Audio.mp3" type="audio/mp3">
+        </audio>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
