--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link rel="icon" href="assests/img/window.svg">
     </head>
     <body>
-        <audio autoplay loop >
+        <audio control hidden autoplay loop >
             <source src="assests/song/My Audio.mp3" type="audio/mp3">
         </audio>
         <!--==================== HEADER ====================-->
