--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <img src="assests/img/abouts.jpg" alt="" class="about__img">
 
                     <div class="about__data">
-                        <p class="about__discription">Harsh is an adept and driven individual with a strong passion for cutting-edge technology. He excels as a Front-end Web Developer, demonstrating expertise in the field of AI-ML research. Additionally, he possesses a profound enthusiasm for Crypto and Web3 advancements.</p>
+                        <p class="about__discription">An adaptive and driven individual with a strong passion for cutting-edge technology.Excels as a Front-end Web Developer, demonstrating expertise in the field of AI-ML research. Additionally,possesses a profound enthusiasm for Crypto and Web3 advancements.</p>
                         <div><br></div>
 
                         <div class="about__buttons">
