--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                         <div class="home__data">
                             <h1 class="home__title">Hi, I'm Harsh</h1>
-                            <h3 class="home__subtitle">ML developer</h3>
+                            <h3 class="home__subtitle"><span class="multiple-text"></span></h3>
                             <p class="home__description">Myself Harsh Raj persuing B.Tech in CSE specialization in Artificial Intelligence and Machine Learning. Solving problems creatively is what I do. I am an AI ML enthusiast, looking around for things.</p>
                             <a href="#contact" class="button button--flex">
                                 contact Me <i class="uil uil-message button__icon"></i>
